# playwright-pytest

./: .condarc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  conda_build_config.yaml  conda_build_config_asyncio.yaml  local-requirements.txt  meta.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.azure-pipelines/: publish.yml
.github/workflows/: ci.yml  python-publish.yml
pytest-playwright/: README.md  pyproject.toml
pytest-playwright-asyncio/: README.md  meta.yaml  pyproject.toml
pytest-playwright-asyncio/pytest_playwright_asyncio/: __init__.py  pytest_playwright.py
pytest-playwright/pytest_playwright/: __init__.py  pytest_playwright.py
pytest_playwright/: async_api.py  asyncio.py  base.py  pytest_playwright.py  sync.py
tests/: conftest.py  test_async.py  test_asyncio.py  test_playwright.py  test_sync.py
tests/assets/django/: settings.py  urls.py
